<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arqdsis.usjt.simuladorprova.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nome"
        android:id="@+id/lbl_nome"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed_nome"
        android:layout_below="@id/lbl_nome"
        android:hint="@string/hint_nome"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_interesse"
        android:layout_below="@id/ed_nome"
        android:text="@string/lbl_interesse"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed_interesse"
        android:hint="@string/hint_interesse"
        android:layout_below="@id/lbl_interesse"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_buscar"
        android:text="@string/btn_Buscar"
        android:layout_below="@id/ed_interesse"
        android:onClick="BuscarLivros"
        />


</RelativeLayout>
